// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert query with an inline sql comment 1`] = `
Object {
  "body": "Just a comment",
  "book_id": null,
  "id": Any<Number>,
  "user_id": 1,
}
`;

exports[`select exists query, testing #472 1`] = `
Array [
  Object {
    "isTransactionExists": true,
  },
]
`;

exports[`select query nullability override on return field 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Black Swan",
  },
  Object {
    "id": 2,
    "name": "The Dragons Of Eden",
  },
  Object {
    "id": 3,
    "name": "Mysteries of a Barbershop",
  },
  Object {
    "id": 4,
    "name": "In the Jungle of Cities",
  },
]
`;

exports[`select query with dynamic or 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Black Swan",
  },
]
`;

exports[`select query with interval field 1`] = `
Array [
  Object {
    "duration": "0 years 0 mons 0 days 1 hours 23 mins 45.0 secs",
    "id": 1,
    "text_book_id": 1,
  },
  Object {
    "duration": "0 years 0 mons 0 days 2 hours 34 mins 56.0 secs",
    "id": 2,
    "text_book_id": 2,
  },
  Object {
    "duration": "0 years 0 mons 0 days 3 hours 45 mins 57.0 secs",
    "id": 3,
    "text_book_id": 3,
  },
  Object {
    "duration": "0 years 0 mons 0 days 4 hours 56 mins 48.0 secs",
    "id": 4,
    "text_book_id": 4,
  },
]
`;

exports[`select query with join and a parameter override 1`] = `
Array [
  Object {
    "author_id": 2,
    "categories": null,
    "id": 2,
    "name": "The Dragons Of Eden",
    "rank": 4,
  },
]
`;

exports[`select query with json fields and casts 1`] = `Array []`;

exports[`select query with parameters 1`] = `
Array [
  Object {
    "body": "Fantastic read, recommend it!",
    "book_id": 1,
    "id": 1,
    "user_id": 1,
  },
  Object {
    "body": "Did not like it, expected much more...",
    "book_id": 2,
    "id": 2,
    "user_id": 1,
  },
]
`;

exports[`select query with unicode characters 1`] = `Array []`;

exports[`ts-implicit mode query 1`] = `
Array [
  Object {
    "author_id": 1,
    "categories": null,
    "id": 1,
    "name": "Black Swan",
    "rank": 1,
  },
]
`;
